--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,10 @@ install:
 before_script:
   - export TZ='Asia/Shanghai'
   - npm install -g gulp
-  - chmod +x _travis.sh
+  - chmod +x travis.sh
   - git config user.name "aiceflower"
   - git config user.email "aiceflower@sina.com"
-  - sed -i "s~ git@github.com:aiceflower/aiceflower.github.io.git~ https://${blog-access-token}@github.com/aiceflower/aiceflower.github.io.git~" _config.yml
+  - sed -i'' "s~ git@github.com:aiceflower/aiceflower.github.io.git~ https://${blog-access-token}@github.com/aiceflower/aiceflower.github.io.git~" _config.yml
 
 script:
   - hexo clean 
