--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_script:
   - git config user.name "aiceflower"
   - git config user.email "aiceflower@sina.com"
   - sed -i'' "s~ git@github.com:aiceflower/aiceflower.github.io.git~ https://${blog-access-token}@github.com/aiceflower/aiceflower.github.io.git~" _config.yml
+ -  cat _config.yml
 
 script:
   - hexo clean 
