--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
   - chmod +x travis.sh
   - git config user.name "aiceflower"
   - git config user.email "aiceflower@sina.com"
-  - sed -i'' "s~ git@github.com:aiceflower/aiceflower.github.io.git~ https://${aiceflower-token}@github.com/aiceflower/aiceflower.github.io.git~" _config.yml
+  - sed -i'' "s~ git@github.com:aiceflower/aiceflower.github.io.git~ https://${accessToken}@github.com/aiceflower/aiceflower.github.io.git~" _config.yml
   - cat _config.yml
 
 script:
