--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://github.com/aiceflower/aiceflower.github.io
-root: /
-permalink: :year/:month/:day/:title/
+root: /aiceflower.github.io
+permalink: :title/
 permalink_defaults:
 
 # Directory
