--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://github.com/aiceflower/aiceflower.github.io
-root: /aiceflower.github.io
+root: /
 permalink: :title/
 permalink_defaults:
 
